# python-project-lvl2

./: Makefile  README.md  __init__.py  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
gendiff/: __init__.py  args_parser.py  data_parser.py  data_reader.py  file_reader.py  gen_diff.py  gendiff.py  get_diff.py  lib.py
gendiff/formatters/: format.py  json.py  plain.py  stylish.py
gendiff/scripts/: __init__.py  gen_diff.py  gendiff.py
tests/: test_generate_diff.py  test_scripts_gendiff.py
tests/fixtures/: file1_file2_json_diff  file2.yaml  file3.json  file3_file4_diff  file3_file4_json_diff  file3_file4_plain_diff  file3_file4_stylish_diff  file4.yml  file_non_valid_text.json  fixtures.py  gendiff_help_message
