[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Difference Calculator"
authors = ["Dmitry Chmerenko <dchmerenko@gmail.com>"]
license = "Beerware"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-cov = "^2.12.0"
wemake-python-styleguide = "^0.15.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
